@@ -1,3 +1,12 @@
+Thu Nov  4 19:28:02 UTC 2010  Don Hudson  <hudsond@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportFactory.cpp:
+
+          Changed locking in get_or_create_factory() to guard
+          find, generate new factory, and register instead of releasing 
+          lock after find and getting a new lock before generating
+          a new factory.
+
 Thu Nov  4 19:11:05 UTC 2010  Don Hudson  <hudsond@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.cpp:
